fixed overflow-x

--- a/css/components/card.css
+++ b/css/components/card.css
@@ -1,5 +1,6 @@
 .cards {
   width: 100vw;
+  max-width: 100%;
   margin: 42px auto 0 auto;
   display: flex;
   flex-wrap: wrap;
